# XGI

./: LICENSE  README.md
Example/: CMakeLists.txt  main.c
Example/Shaders/: Default.frag  Default.vert  test.comp
Include/: vk_mem_alloc.h
XGI/: EventHandler.c  EventHandler.h  File.c  File.h  FrameBuffer.c  FrameBuffer.h  Graphics.c  Graphics.h  Input.c  Input.h  LinearMath.c  LinearMath.h  List.c  List.h  Physics.c  Physics.h  Pipeline.c  Pipeline.h  Random.c  Random.h  StorageBuffer.c  StorageBuffer.h  Swapchain.c  Swapchain.h  Texture.c  Texture.h  UniformBuffer.c  UniformBuffer.h  VertexBuffer.c  VertexBuffer.h  Window.c  Window.h  XGI.c  XGI.h  log.c  spirv_reflect.c
XGITest/: CompileShaders.command  SPV.py  main.c  vk_mem_alloc.cpp
XGITest/Shaders/: Default.frag  Default.frag.c  Default.frag.spv  Default.vert  Default.vert.c  Default.vert.spv
